# ussd-api

./: LICENSE  README.md  pyproject.toml  requirements-dev.txt  run.sh  setup.py
tests/: conftest.py  fixtures.py  menu-template.json  test_core_api.py  test_session_store.py  test_state_engine.py
ussd_api/: consts.py  core.py  exceptions.py  session_store.py  state_engine.py
